tests/fixtures/stl/errors/test_missing_semicolon.stl
// Error: missing semicolon after field
prompt broken {
  is {
    name is text<length=10>
    age is text<length=5>;
  }
}
export broken as main;
